--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node -r dotenv/config bin/www",
-    "dev": "nodemon -r dotenv/config bin/www"
+    "dev": "nodemon -r dotenv/config bin/www",
+    "db:create":"sequelize db:create",
+    "db:drop":"sequelize db:drop",
+    "db:migrate":"sequelize db:migrate",
+    "db:migrate:undo":"sequelize db:migrate:undo",
+    "db:seed":"sequelize db:seed",
+    "db:seed:undo":"sequelize db:seed:undo"
   },
   "author": "",
   "license": "ISC",
